[gd_scene load_steps=20 format=2]

[ext_resource path="res://textures/smoke.png" type="Texture" id=1]
[ext_resource path="res://entities/particles/Explosion.gd" type="Script" id=2]
[ext_resource path="res://textures/shaders/Distortion.tres" type="Material" id=3]
[ext_resource path="res://textures/explosion_shape.png" type="Texture" id=4]
[ext_resource path="res://sounds/explosion.ogg" type="AudioStream" id=5]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.735849, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.0745098, 0.0745098, 0.0745098, 1, 0.701961, 0.701961, 0.701961, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
max_value = 6.0
_data = [ Vector2( 0.0310078, 3.075 ), 0.0, 0.0, 0, 0, Vector2( 1, 6 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 1.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 236.84
initial_velocity_random = 1.0
angular_velocity = 151.58
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale_curve = SubResource( 9 )
color = Color( 0, 0, 0, 1 )
color_ramp = SubResource( 7 )

[sub_resource type="CircleShape2D" id=11]
radius = 8.0

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.179245, 0.566038, 0.993548 )
colors = PoolColorArray( 0.207031, 0.207031, 0.207031, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 10.0
_data = [ Vector2( 0, 0.818182 ), 0.0, 0.0, 0, 0, Vector2( 0.147287, 2.63636 ), 0.0, 0.0, 0, 0, Vector2( 0.968992, 3.18182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 1.0
flag_disable_z = true
gravity = Vector3( 1, 2, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
angular_velocity = 33.57
orbit_velocity = 0.01
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=13]
lifetime_randomness = 1.0
flag_disable_z = true
gravity = Vector3( 1, 2, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
angular_velocity = 33.57
orbit_velocity = 0.01
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=14]
radius = 7.07107

[sub_resource type="Animation" id=17]
resource_name = "explode"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionShader:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 3 ), Vector2( 0, 0 ) ]
}

[node name="Explosion" type="RigidBody2D"]
sleeping = true
script = ExtResource( 2 )

[node name="Explosion" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 10.0
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="DebrisGroup" type="Node2D" parent="."]

[node name="Debris" type="RigidBody2D" parent="DebrisGroup"]
sleeping = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DebrisGroup/Debris"]
shape = SubResource( 11 )
disabled = true

[node name="Smoke" type="Particles2D" parent="DebrisGroup/Debris"]
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 1 )

[node name="Debris2" type="RigidBody2D" parent="DebrisGroup"]
sleeping = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DebrisGroup/Debris2"]
shape = SubResource( 11 )
disabled = true

[node name="Smoke" type="Particles2D" parent="DebrisGroup/Debris2"]
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )

[node name="ExplosionShader" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 1, -1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 17 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true
max_distance = 15000.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
